fix project use strict and type common

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "orion-vision-mcp",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "MCP server for Azure Form Recognizer / Document Intelligence integration",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "commonjs",
   "bin": {
     "orion-vision-mcp": "dist/index.js"
   },
